# golden_Snitch

./: .gitignore  BLOCKCHAIN_INFO.md  CHANGELOG.md  LICENSE  PHAM_BLOCKCHAIN_LOG.md  README.md  README_EN.md  SIGNATURE.sha256  pyproject.toml
Drone_Control_Foundation/: .gitignore  CHANGELOG.md  README.md  README_EN.md  pyproject.toml
Drone_Control_Foundation/docs/: DYNAMICS_INTEGRATION_MAP.md  LAYER_MAP.md  LAYER_MAP_EN.md  VENDOR_BINDING_SLOTS.md
Drone_Control_Foundation/drone_control_foundation/: __init__.py  arbiter.py  battery_adapter.py  contracts.py  control_tick.py  flight_bridges.py  health.py  mixer.py  reference_plant.py  robot_adapter.py  sensory_adapter.py  surface.py
Drone_Control_Foundation/examples/: run_sensor_dcf_battery_stub.py  run_sensory_tam_dcf_chain.py  run_tam_dcf_stub_adapter.py
Drone_Control_Foundation/tests/: test_drone_control_foundation.py
docs/: NEXUS_CONSUMPTION.md  PX4_ARDUPILOT_MAPPING.md
drone_robot_adapter/: __init__.py  ardupilot_bridge.py  contracts.py  health_bridge.py  nexus_bridge.py  px4_bridge.py  watchdog.py
examples/: run_dcf_dra_integration.py  run_nexus_drone_brief.py
scripts/: cleanup_generated.py  regenerate_signature.py  release_check.py  verify_signature.py
tests/: conftest.py  test_dcf_dra_integration.py  test_drone_robot_adapter.py
