[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-robot-adapter"
version = "0.1.1"
description = "Vendor HAL scaffold for Drone_Control_Foundation actuator intents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["drone_robot_adapter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
