[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-control-foundation"
version = "0.1.3"
description = "Extensible multicopter control contracts: safety arbiter, mixer intent, reference plant tick"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["drone_control_foundation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
